...
    return Padding(
      padding: const EdgeInsets.symmetric(horizontal: 20),
      child: Center(
        child: Column(
          children: [
            Text(
              key: const ValueKey('home_title'),
              'Write to your colleagues',
              style: GoogleFonts.quicksand(
                color: Colors.white,
                fontSize: 50,
                fontWeight: FontWeight.bold,
                height: 1.1,
...
